add example with viewmodel

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Todo"/>
+
+    <Button
+        android:id="@+id/btnGoToToDoViewModel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Todo ViewModel"/>
 </LinearLayout>
