--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,12 @@
         android:text="Counter"/>
 
     <Button
+        android:id="@+id/btnGoToCounterThunk"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Counter with Kdux-Thunk"/>
+
+    <Button
         android:id="@+id/btnGoToToDo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
